k8s/20-grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: socialflow
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
      protocol: TCP
      name: http
  selector:
    app: grafana
